--- a/tictactoe/styles/styles.css
+++ b/tictactoe/styles/styles.css
@@ -32,6 +32,6 @@ body{
 }
 
 .btn-alt:hover{
-    background-color: rgb(245,232,255);
+    background-color: rgb(249, 244, 253);
     border-color: transparent;
 }
